added basic recipe for icecream

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link href="pizza.css" rel="stylesheet" >
     <h1>Pizza Time</h1>
         <img src="https://imgs.search.brave.com/TkyHafM4Ace3GYS6cySGbD5JUNHlxEcj-RZkiFOLWrg/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA4LzAyLzUwLzg1/LzM2MF9GXzgwMjUw/ODU4N180aVVXZmJM/Q2VTWVFDbWZ2WWR1/cm82Y1RkbTdZWTRx/RC5qcGc" alt="PizzaImage">
     <h2>Description</h2>
@@ -27,7 +28,15 @@
         <li>Vegetables: Mushrooms, capsicum, olives, and aubergines are popular vegetable toppings.</li>
         <li>Pesto: A sauce made from basil, garlic, and olive oil, often used as a topping.</li>
         <li>Ricotta: Used as a topping or mixed with other ingredients for a creamy sauce.</li>
-        
-     </ul>   
+     </ul>
+     <h2>Steps</h2>
+    <ol>
+        <li>Step 1: Prepare the Crust</li>
+        <li>Step 2: Shape the Crust</li>
+        <li>Step 3: Add Sauce</li>
+        <li>Step 4: Add Toppings </li>
+        <li>Step 6: Bake the Pizza</li>
+        <li>Finish and Serve</li>
+    </ol>   
 </body>
 </html>
